@@ -1,3 +1,10 @@
+2000-06-25  Dave Peticolas  <dave@krondo.com>
+
+	* src/scm/date-utilities.scm: cleanup.
+
+	* src/scm/report/transaction-report.scm: fix bug in use of
+	timepairs.
+
 2000-06-18  Dave Peticolas  <dave@krondo.com>
 
 	* src/scm/command-line.scm: take 'development version' out
